Details
-
Type:
Bug
-
Status: Closed
-
Priority:
Not Evaluated
-
Resolution: Done
-
Affects Version/s: Qt Creator 5.0.0, Qt Creator 5.0.1, Qt Creator 5.0.2
-
Fix Version/s: Qt Creator 5.0.3, Qt Creator 6.0.0-beta2
-
Component/s: C/C++/Obj-C++ Support
-
Labels:None
-
Platform/s:
-
Commits:8c86b9bca17da149bb6668960af2da8f13d88f93 2085e2ad0bab2883b951bd9bceee45d9a8aee529 (qt-creator/qt-creator/5.0)
Description
In our project we use custom static code generator, that reads pseudo headers files and produces real header and source files. For that we use QMAKE_EXTRA_COMPILERS. I attached a small example of such project with generator being simple cp command.
Compilation works fine, but if you open generated source file in qtcreator the syntax highlighting doesn't work. Include paths don't work. And since that the whole code model breaks and sources are unnavigable.
Repro:
- Open the attached project
- Compile it
- In qtcreator click open file, navigate to build directory and select extra_foo.cpp
Expected:
- Syntax highlighting works
- Code model works
- Source file in navigable
Actual:
- Syntax highlighting doesn't work
- Code model doesn't work
- Source file is unnavigable
This worked fine in qtcreator 4.15.2