CppEditor: Make sure fallback project part is up to date

... with regards to the session include paths.
Amends 0636238429.

Fixes: QTCREATORBUG-26323
(cherry picked from commit 8c86b9bca17da149bb6668960af2da8f13d88f93)
Change-Id: I972a314db607d0b06859744dec4c83e885be3b5c
Reviewed-by: Eike Ziller <eike.ziller@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: David Schulz <david.schulz@qt.io>